--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.21",
     "lucide-react": "^0.544.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.1",
+    "react-checkmark": "^2.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.3",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.4.0",
